--- a/src/assets/icon/iconfont.css
+++ b/src/assets/icon/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1493794500617'); /* IE9*/
-  src: url('iconfont.eot?t=1493794500617#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1493794500617') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1493794500617') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1493794500617#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1494232983007'); /* IE9*/
+  src: url('iconfont.eot?t=1494232983007#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1494232983007') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1494232983007') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1494232983007#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,25 +15,65 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-gonggao:before { content: "\3458"; }
+
+.icon-appreciate:before { content: "\e644"; }
+
+.icon-check:before { content: "\e645"; }
+
+.icon-close:before { content: "\e646"; }
+
+.icon-edit:before { content: "\e649"; }
+
+.icon-favor:before { content: "\e64c"; }
+
+.icon-loading:before { content: "\e64f"; }
+
+.icon-like:before { content: "\e669"; }
+
+.icon-notification:before { content: "\e66b"; }
+
+.icon-shop:before { content: "\e676"; }
+
 .icon-back:before { content: "\e679"; }
+
+.icon-cascades:before { content: "\e67c"; }
+
+.icon-more:before { content: "\e684"; }
+
+.icon-pic:before { content: "\e69b"; }
+
+.icon-refresh:before { content: "\e6a4"; }
+
+.icon-cart:before { content: "\e6af"; }
 
 .icon-remind:before { content: "\e6b2"; }
 
 .icon-home:before { content: "\e6b8"; }
 
-.icon-cart:before { content: "\e698"; }
+.icon-homefill:before { content: "\e6bb"; }
 
-.icon-pic:before { content: "\e6a8"; }
+.icon-weibiaoti1:before { content: "\e60c"; }
 
-.icon-set:before { content: "\e6ae"; }
+.icon-notificationforbidfill:before { content: "\e6db"; }
+
+.icon-wifi:before { content: "\e6f2"; }
+
+.icon-sort:before { content: "\e700"; }
+
+.icon-edit1:before { content: "\e69e"; }
 
 .icon-viewgallery:before { content: "\e6b4"; }
 
-.icon-community:before { content: "\e741"; }
+.icon-apps:before { content: "\e729"; }
 
-.icon-map:before { content: "\e715"; }
+.icon-attention:before { content: "\e73d"; }
 
-.icon-share:before { content: "\e71d"; }
+.icon-write:before { content: "\e761"; }
 
-.icon-store:before { content: "\e722"; }
+.icon-imagetext:before { content: "\e6fb"; }
+
+.icon-baoxiang:before { content: "\f02a1"; }
+
+.icon-coffee:before { content: "\e621"; }
 
