:bento: add assets about iconfont

--- a/src/assets/icon/iconfont.css
+++ b/src/assets/icon/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1494232983007'); /* IE9*/
-  src: url('iconfont.eot?t=1494232983007#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1494232983007') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1494232983007') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1494232983007#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1494397615307'); /* IE9*/
+  src: url('iconfont.eot?t=1494397615307#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1494397615307') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1494397615307') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1494397615307#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -14,8 +14,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-.icon-gonggao:before { content: "\3458"; }
 
 .icon-appreciate:before { content: "\e644"; }
 
@@ -39,9 +37,9 @@
 
 .icon-cascades:before { content: "\e67c"; }
 
-.icon-more:before { content: "\e684"; }
-
 .icon-pic:before { content: "\e69b"; }
+
+.icon-top:before { content: "\e69e"; }
 
 .icon-refresh:before { content: "\e6a4"; }
 
@@ -49,11 +47,13 @@
 
 .icon-remind:before { content: "\e6b2"; }
 
+.icon-delete:before { content: "\e6b4"; }
+
 .icon-home:before { content: "\e6b8"; }
 
 .icon-homefill:before { content: "\e6bb"; }
 
-.icon-weibiaoti1:before { content: "\e60c"; }
+.icon-add:before { content: "\e6da"; }
 
 .icon-notificationforbidfill:before { content: "\e6db"; }
 
@@ -61,19 +61,53 @@
 
 .icon-sort:before { content: "\e700"; }
 
-.icon-edit1:before { content: "\e69e"; }
+.icon-female:before { content: "\e71a"; }
 
-.icon-viewgallery:before { content: "\e6b4"; }
+.icon-male:before { content: "\e71c"; }
 
 .icon-apps:before { content: "\e729"; }
 
+.icon-ditu:before { content: "\e638"; }
+
 .icon-attention:before { content: "\e73d"; }
+
+.icon-community:before { content: "\e741"; }
 
 .icon-write:before { content: "\e761"; }
 
-.icon-imagetext:before { content: "\e6fb"; }
+.icon-nav:before { content: "\e602"; }
 
-.icon-baoxiang:before { content: "\f02a1"; }
+.icon-baoxiang:before { content: "\e603"; }
 
-.icon-coffee:before { content: "\e621"; }
+.icon-touxiang:before { content: "\e64b"; }
+
+.icon-jingdian:before { content: "\e600"; }
+
+.icon-ditu-copy:before { content: "\e633"; }
+
+.icon-zhoubian:before { content: "\e621"; }
+
+.icon-touxiang1:before { content: "\e666"; }
+
+.icon-jiaotong:before { content: "\e605"; }
+
+.icon-zhoubianhuodongjingdianxinxi:before { content: "\e61e"; }
+
+.icon-imagetext:before { content: "\e641"; }
+
+.icon-lvyouxianlu:before { content: "\e656"; }
+
+.icon-touxiang2:before { content: "\e637"; }
+
+.icon-touxiang3:before { content: "\e601"; }
+
+.icon-zhoubian1:before { content: "\e634"; }
+
+.icon-coffee:before { content: "\e7f1"; }
+
+.icon-fangwenliang:before { content: "\e60a"; }
+
+.icon-touxiang4:before { content: "\e606"; }
+
+.icon-touxiang5:before { content: "\e6f6"; }
 
